[package]
name = "tree-sitter-zeus"
description = "Zeus Programming Language"
version = "0.1.0"
authors = ["Stefan Lüdtke <hisoka999@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "zeus"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "http://github.com/hiska999/tree-sitter-zeus"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
